Large changes being made to the repository. Had lots of trouble with UnderConstruction/delmap.Rcheck It may be due to delmap.Rcheck being deleted when R CMD check is run Not sure about this.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/delmap@21 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -1,4 +1,13 @@
-export(SimDeletions, ReadData)
+export(
+       CleanData, 
+       IdentifyMarkerBlocks,
+       ImputeMissingGeno,
+       SimDeletions,
+       CreateDistMatrix,
+       IdentifyMarkerOrd,
+       PermuteCols,   
+       ReadData
+        )
 S3method(print, delmap.data)
-
+import(seriation, TSP)
 
