Adde plotting function
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/delmap@27 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/UnderConstruction/delmap/NAMESPACE
+++ b/UnderConstruction/delmap/NAMESPACE
@@ -10,5 +10,5 @@ export(
         )
 S3method(print, delmap.data)
 S3method(plot, delmap.data)
+importFrom(fields, two.colors)
 import(seriation, TSP)
-
