--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -9,5 +9,6 @@ export(
        ReadData
         )
 S3method(print, delmap.data)
+S3method(plot, delmap.data)
+importFrom(fields, two.colors)
 import(seriation, TSP)
-
