--- a/UnderConstruction/delmap/DESCRIPTION
+++ b/UnderConstruction/delmap/DESCRIPTION
@@ -5,6 +5,6 @@ Version: 1.0
 Date: 2012-11-12
 Author: Andrew W. George
 Maintainer: Andrew George <andrew.george@csiro.au>
-Description:  Deletion mapping is a statistical technique for ordering genetic markers. Unlike linkage mapping that is reliant upon recombinations to order loci, deletion mapping depends upon genomic deletions. These genomic deletions are introduced artificially. This package visualizes and analyzes deletion data on inbreds. The data can be read in from file or simulated.  
+Description:  Deletion mapping is a statistical technique for ordering genetic markers. Unlike linkage mapping that is reliant upon recombinations to order loci, deletion mapping depends upon genomic deletions. This package visualizes and analyzes deletion data on inbreds. The data can be read in from file or simulated.  
 License: GPL (>= 2.0)
 Depends: R (>= 2.15.0), TSP, seriation, fields
