--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -8,6 +8,7 @@ export(
        PermuteCols,   
        ReadData
         )
+S3method(as.delmap.data, matrix)
 S3method(print, delmap.data)
 S3method(plot, delmap.data)
 importFrom(fields, two.colors)
