--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -1,15 +1,17 @@
-export(
+export (
+       as.delmap, 
        CleanData, 
        Collapse,
        IdentifyMarkerBlocks,
        ImputeMissingGeno,
+       is.delmap,
        SimDeletions,
        CreateDistMatrix,
        IdentifyMarkerOrd,
        PermuteCols,   
        ReadData
         )
-S3method(as.delmap.data, matrix)
+S3method(as.delmap, matrix)
 S3method(print, delmap.data)
 S3method(plot, delmap.data)
 importFrom(fields, two.colors)
