21/03/13  Added DeletionMapping and accompanying help files
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/delmap@37 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -2,6 +2,7 @@ export (
        as.delmap, 
        CleanData, 
        Collapse,
+       DeletionMapping,
        IdentifyMarkerBlocks,
        ImputeMissingGeno,
        is.delmap,
