28/03/2013 Working version of DeletionMapping with Rcpp functionality
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/delmap@39 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -1,6 +1,6 @@
 useDynLib(delmap)
-exportPattern("^[[:alpha:]]+")
 export (
+       iDeletionMapping,
        as.delmap, 
        CleanData, 
        Collapse,
