12/04/2013 Removed Rcpp version of DeletionMapping and turned it back to native R version.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/delmap@47 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -1,6 +1,4 @@
-useDynLib(delmap)
 export (
-       iDeletionMapping,
        as.delmap, 
        CleanData, 
        Collapse,
@@ -12,8 +10,8 @@ export (
        CreateDistMatrix,
        IdentifyMarkerOrd,
        PermuteCols,   
-       ReadData
-        )
+       ReadData,
+       RearrangeDist)
 S3method(as.delmap, matrix)
 S3method(print, delmap.data)
 S3method(plot, delmap.data)
