12/04/2013 Tidying up code
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/delmap@51 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -1,19 +1,19 @@
 export (
-       as.delmap, 
+       as.dmdata, 
        CleanData, 
        Collapse,
        DeletionMapping,
        IdentifyMarkerBlocks,
        ImputeMissingGeno,
-       is.delmap,
+       is.dmdata,
        SimDeletions,
        CreateDistMatrix,
        IdentifyMarkerOrd,
        PermuteCols,   
        ReadData,
        RearrangeDist)
-S3method(as.delmap, matrix)
-S3method(print, delmap.data)
-S3method(plot, delmap.data)
+S3method(as.dmdata, matrix)
+S3method(print, dmdata)
+S3method(plot, dmdata)
 importFrom(fields, two.colors)
 import(seriation, TSP)
