22/04/2013 Major changes. Added sim.dmdata, blocking structure when simulating data, sim.dmmap. Moving towards a genome wide deletion mapping structure.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/delmap@57 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -8,11 +8,13 @@ export (
        ImputeMissingGeno,
        is.dmdata,
        is.dmdist,
-       SimDeletions,
+       sim.dmdata,
+       sim.dmmap,
        CreateDistMatrix,
        IdentifyMarkerOrd,
        PermuteCols,   
-       ReadData,
+       read.dmdata,
+       read.dmmap,
        RearrangeDist)
 S3method(as.dmdata, matrix)
 S3method(as.dmdist, list)
