1/05/2014 Added map element to dmdata class.   Added new function -  subsetdata.Rd and modified NAMESPACE   Modified  dmplot to also display marker map positions at bottom of plot.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/delmap@63 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -4,6 +4,7 @@ export (
        as.dmdist,
        dmplot,
        cleandata, 
+       subsetdata,
        dmapping,
        dmappingchrm,
        idmarkerblocks,
