30/072104  Major update.  Just about to change dmdata and dmdatachrm structure so that map is contained at the chromosome level and in the dmdatachrm structure instead of the dmdata structure.
This is needed because I want to create a combinedata function that
combines two dmdatachrm objects but I also need to combine the maps but 
this is only in the dmdata object. 


git-svn-id: svn://svn.r-forge.r-project.org/svnroot/delmap@65 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -28,4 +28,4 @@ S3method(print, dmdata)
 S3method(print, dmdatachrm)
 S3method(print, dmdist)
 importFrom(fields, two.colors)
-import(seriation, TSP)
+import(seriation, TSP, ggplot2, reshape)
